# challenge-numbers

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  settings.py
tests/models/: test_number.py  test_numbers.py
