[tool.poetry]
name = "challenge-numbers"
version = "0.1.0"
description = ""
authors = ["Woshington <Woshington@usezapay.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
